--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ NODE_ENV=development
 # Provedor de IA Ativo
 PROVIDER=openai
 
+# Configuração de Tokens
+# Limite máximo de tokens na resposta da LLM (padrão: 4000)
+MAX_TOKENS=8000
+
 # OpenAI
 OPENAI_API_KEY=sk-...
 OPENAI_MODEL=gpt-4
@@ -37,6 +41,6 @@ GENERATIVA_API_KEY=sk-...
 GENERATIVA_BASE_URL=https://api.generativa.com/v1
 GENERATIVA_MODEL=gpt-4
 
-# Caminhos de Configuração (opcional - sobrescreve padrão /etc/rapport/genai-eng-prompt/)
+# Caminhos de Configuração (opcional - sobrescreve padrão /etc/genai-eng-prompt/)
 # CONFIG_PATH=/caminho/para/config.json
 # ADS_CONFIG_PATH=/caminho/para/ads.conf
